--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=TODO
-sonar.organization=TODO
+sonar.projectKey=sopra-fs24-group-28_spotify-memory-client
+sonar.organization=sopra-fs24-group-28
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=client
