--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "serve": "^14.2.1",
     "typescript": "^3.2.1"
   },
