--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.26.4",
     "serve": "^14.2.1",
     "typescript": "^3.2.1"
   },
